# coimbra

./: .bumpversion.cfg  .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  mypy.ini  setup.cfg  tox.ini
.github/workflows/: check_release_notes.yaml
coimbra/: __init__.py  exceptions.py  models.py
examples/: print_version.py
tests/unit/: test_init.py
