[metadata]
name = coimbra
version = 0.1.0
description = Resources store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tpvasconcelos/coimbra
author = Tomas Pereira de Vasconcelos
author_email = tomasvasconcelos1@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Typing :: Typed
#keywords =
project_urls =
    Documentation = https://github.com/tpvasconcelos/coimbra
    Source = https://github.com/tpvasconcelos/coimbra
    Tracker = https://github.com/tpvasconcelos/coimbra/issues

[options]
packages = find:
#install_requires =
python_requires = >=3.7,<4
include_package_data = True

[options.extras_require]
linting =
    pre-commit==2.13.0
tests =
    pytest==6.2.4
    pytest-cov==2.12.1
ci =
    tox==3.23.1
cd =
    bumpversion==0.6.0
    sphinx==4.0.2
    twine==3.4.1
dev =
    %(linting)s
    %(tests)s
    %(ci)s
    %(cd)s
    ipython==7.24.1
notebook =
    ipykernel==5.5.5
    jupyterlab==3.0.16
all =
    %(dev)s
    %(notebook)s

[bdist_wheel]
universal = True

[flake8]
exclude =
    docs
    .venv
    build
    *.pyi
    .git
    build
    .tox
max-line-length = 120
ignore =
    E722
    E203
    W503

[isort]
known_first_party = coimbra
src_paths = coimbra,tests
combine_as_imports = true
profile = black
